<resources>
    <!-- ActivitySplash -->
    <string name="app_name">Pyramide Luck</string>
    <string name="loading_text">Loading</string>
    <!-- ActivityLogin -->
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <!-- ActivitySettings -->
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>
    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <!-- Authorization -->
    <string name="title_sign_up">Sign Up</string>
    <string name="title_email">Via email</string>
    <string name="title_phone">Via phone</string>
    <string name="title_sign_up_description">if you want to save score</string>
    <string name="policy"><u>privacy</u></string>
    <string name="btn_phone">btn_phone</string>
    <string name="btn_email">btn_email</string>
    <string name="title_email_description">Enter your email</string>
    <string name="anonymous_mode"><u>anonymous mode</u></string>
    <string name="btn_play">btn_play</string>
    <string name="btn_back">btn_back</string>
    <string name="testEmail">test@gmail.com</string>
    <string name="title_phone_description">Enter your phone</string>
    <string name="phone_hint">668459578</string>
    <!-- ActivityPrivacy  -->
    <string name="title_privacy">Privacy Policy and Terms</string>
    <string name="title_description">Do you accept with our privacy?</string>
    <string name="btn_privacy">btn_privacy</string>
    <string name="you_agree">Do you agree?</string>
    <string name="btn_no">btn_no</string>
    <string name="btn_yes">btn_yes</string>
    <string name="btn_register">btn_register</string>
    <string name="btn_settings">btn_settings</string>
    <string name="btn_exit">btn_exit</string>
    <string name="small">small</string>
    <!-- ActivitySettings  -->
    <string name="title_settings">Settings</string>
    <string name="title_sounds">Sounds</string>
    <string name="title_vibration">Vibration</string>
    <string name="title_reset_score"><u>Reset \nscore</u></string>
    <string name="title_remove_account"><u>Remove\naccount</u></string>
    <!-- ActivityMenu  -->
    <string name="btn_game_first">btn_game_first</string>
    <string name="btn_game_second">btn_game_second</string>
    <string name="btn_game_three">btn_game_three</string>
    <string name="btn_game_four">btn_game_four</string>
    <string name="btn_game_fife">btn_game_fife</string>
    <string name="btn_game_six">btn_game_six</string>
    <string name="btn_game_seven">btn_game_seven</string>
    <!-- ActivityScene  -->
    <string name="title_game_first">RomeEgypt</string>
    <string name="title_game_second">HelioPOPolis</string>
    <string name="title_game_three">"Cleo'sBook"</string>
    <string name="title_game_four">"FortunePlay"</string>
    <string name="title_game_fife">"EgyptPlay"</string>
    <string name="title_win">WIN 0</string>
    <string name="title_total">Total 10000</string>
    <string name="title_bid">1000</string>
    <string name="btn_minus">btn_minus</string>
    <string name="btn_spin">btn_spin</string>
    <string name="arrow_scene">arrow_scene</string>
    <string name="wheel_scene">wheel_scene</string>
    <string name="chest_scene">chest_scene</string>
    <string name="title_landscape">Please switch to landscape mode</string>
    <string name="btn_bid">btn bid</string>
    <string name="title_description_policy">You can read our privacy policy</string>
    <string name="title_privacy_second">Privacy Policy</string>
    <string name="btn_accept">btn_accept</string>

</resources>