<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation_games.xml"
    app:startDestination="@id/game_first">

    <fragment
        android:id="@+id/game_first"
        android:name="com.pyramidal.luuck.ui.main.scene.games.GameFirstFragment"
        android:label="@string/title_game_first"
        tools:layout="@layout/fragment_game_first" />
    <fragment
        android:id="@+id/game_three"
        android:name="com.pyramidal.luuck.ui.main.scene.games.GameThreeFragment"
        android:label="@string/title_game_three"
        tools:layout="@layout/fragment_game_three" />

    <fragment
        android:id="@+id/game_four"
        android:name="com.pyramidal.luuck.ui.main.scene.games.GameFourFragment"
        android:label="@string/title_game_four"
        tools:layout="@layout/fragment_game_four" />

    <fragment
        android:id="@+id/game_fife"
        android:name="com.pyramidal.luuck.ui.main.scene.games.GameFifeFragment"
        android:label="@string/title_game_fife"
        tools:layout="@layout/fragment_game_fife" />

</navigation>