<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".ui.main.menu.MenuActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/phone_control"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/btn_register"
            android:layout_width="@dimen/dp175"
            android:layout_height="0dp"
            android:layout_margin="@dimen/dp10"
            android:clickable="true"
            android:contentDescription="@string/btn_register"
            android:focusable="true"
            android:src="@drawable/btn_register"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ImageContrastCheck" />

        <ImageView
            android:id="@+id/btn_settings"
            android:layout_width="@dimen/dp75"
            android:layout_height="0dp"
            android:layout_margin="@dimen/dp10"
            android:clickable="true"
            android:contentDescription="@string/btn_settings"
            android:focusable="true"
            android:src="@drawable/btn_settings"
            app:layout_constraintStart_toEndOf="@+id/btn_register"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ImageContrastCheck" />

        <ImageView
            android:id="@+id/btn_exit"
            android:layout_width="@dimen/dp75"
            android:layout_height="0dp"
            android:layout_margin="@dimen/dp10"
            android:clickable="true"
            android:contentDescription="@string/btn_exit"
            android:focusable="true"
            android:src="@drawable/btn_exit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btn_settings"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ImageContrastCheck" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phone_control">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/games_container"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/phone_control">

            <ImageView
                android:id="@+id/game_first"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="@dimen/dp10"
                android:clickable="true"
                android:contentDescription="@string/btn_game_first"
                android:focusable="true"
                android:src="@drawable/item_large"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/games_container_middle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/game_first">

                <ImageView
                    android:id="@+id/game_second"
                    android:layout_width="190dp"
                    android:layout_height="0dp"
                    android:layout_margin="@dimen/dp10"
                    android:clickable="true"
                    android:contentDescription="@string/btn_game_second"
                    android:focusable="true"
                    android:src="@drawable/item_large2"
                    app:layout_constraintEnd_toStartOf="@+id/game_three"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/game_three"
                    android:layout_width="175dp"
                    android:layout_height="0dp"
                    android:layout_margin="@dimen/dp10"
                    android:contentDescription="@string/btn_game_three"
                    android:src="@drawable/item_small_block"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/game_four"
                    android:layout_width="175dp"
                    android:layout_height="0dp"
                    android:layout_margin="@dimen/dp10"
                    android:contentDescription="@string/btn_game_four"
                    android:src="@drawable/item_small3_block"
                    app:layout_constraintBottom_toBottomOf="@+id/game_second"
                    app:layout_constraintEnd_toEndOf="parent" />

                <ImageView
                    android:id="@+id/game_fife"
                    android:layout_width="250dp"
                    android:layout_height="0dp"
                    android:layout_margin="@dimen/dp10"
                    android:clickable="true"
                    android:contentDescription="@string/btn_game_fife"
                    android:focusable="true"
                    android:src="@drawable/item_large3"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/game_second" />

                <ImageView
                    android:id="@+id/game_six"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_margin="@dimen/dp10"
                    android:clickable="true"
                    android:contentDescription="@string/btn_game_six"
                    android:focusable="true"
                    android:src="@drawable/item_small2"
                    app:layout_constraintBottom_toBottomOf="@+id/game_fife"
                    app:layout_constraintEnd_toEndOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>


            <ImageView
                android:id="@+id/btn_game_seven"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="@dimen/dp10"
                android:clickable="true"
                android:contentDescription="@string/btn_game_seven"
                android:focusable="true"
                android:src="@drawable/item_large4"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/games_container_middle" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>