<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".ui.login.EmailFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/email_control"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/text_via_email"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:fontFamily="@font/alumni_sans_inline_one"
            android:shadowColor="@color/black"
            android:shadowDx="5"
            android:shadowDy="5"
            android:shadowRadius="2"
            android:text="@string/title_email"
            android:textAlignment="center"
            android:textColor="@color/pink"
            android:textSize="@dimen/size_textMain"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/text_description"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="50dp"
            android:fontFamily="@font/alumni_sans_inline_one"
            android:text="@string/title_email_description"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="@dimen/size_textDescription"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_via_email" />

        <EditText
            android:id="@+id/email_layout"
            android:layout_width="@dimen/dp275"
            android:layout_height="@dimen/dp75"
            android:layout_marginTop="25dp"
            android:autofillHints="emailAddress"
            android:background="@drawable/back_email_tab"
            android:fontFamily="@font/alumni_sans_inline_one"
            android:hint="@string/testEmail"
            android:inputType="textEmailAddress"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="@dimen/sp25"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_description"
            tools:ignore="TextContrastCheck" />

        <ImageView
            android:id="@+id/btn_play"
            android:layout_width="@dimen/dp275"
            android:layout_height="0dp"
            android:clickable="true"
            android:contentDescription="@string/btn_play"
            android:focusable="true"
            android:src="@drawable/btn_play"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email_layout"
            tools:ignore="ImageContrastCheck" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/btn_back"
        android:layout_width="@dimen/dp75"
        android:layout_height="0dp"
        android:layout_margin="@dimen/dp10"
        android:clickable="true"
        android:contentDescription="@string/btn_back"
        android:focusable="true"
        android:src="@drawable/btn_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/text_anonymous_mode"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginBottom="25dp"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/alumni_sans_inline_one"
        android:text="@string/anonymous_mode"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="@dimen/size_textDescription"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TouchTargetSizeCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>