<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".ui.login.SignUpFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/sign_up_control"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/text_sign_up"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:fontFamily="@font/alumni_sans_inline_one"
            android:shadowColor="@color/black"
            android:shadowDx="5"
            android:shadowDy="5"
            android:shadowRadius="2"
            android:text="@string/title_sign_up"
            android:textAlignment="center"
            android:textColor="@color/pink"
            android:textSize="@dimen/size_textMain"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/text_description"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="50dp"
            android:fontFamily="@font/alumni_sans_inline_one"
            android:text="@string/title_sign_up_description"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="@dimen/size_textDescription"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_sign_up" />

        <ImageView
            android:id="@+id/btn_phone"
            android:layout_width="@dimen/dp275"
            android:layout_height="0dp"
            android:clickable="true"
            android:contentDescription="@string/btn_phone"
            android:focusable="true"
            android:src="@drawable/btn_phone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_description"
            tools:ignore="ImageContrastCheck" />

        <ImageView
            android:id="@+id/btn_email"
            android:layout_width="@dimen/dp275"
            android:layout_height="0dp"
            android:clickable="true"
            android:contentDescription="@string/btn_email"
            android:focusable="true"
            android:src="@drawable/btn_email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_phone"
            tools:ignore="ImageContrastCheck" />

        <TextView
            android:id="@+id/text_privacy"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/alumni_sans_inline_one"
            android:text="@string/policy"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="@dimen/size_textDescription"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_email"
            tools:ignore="TouchTargetSizeCheck" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>